--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        poetry install --dev
+        pip install poetry
+        poetry install
     - name: Test with pytest
       run: |
         pytest
