--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,7 @@ jobs:
         poetry-version: 1.1.12
     - run: poetry install
     - run: poetry run pytest
+    - run: |
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov
