--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,9 @@
 max-line-length = 88
 max-doc-length = 100
 extend-ignore = E203
+per-file-ignores =
+    pymapper/__init__.py: F401
+    pymapper/layer/__init__.py: F401
 
 [pylint.BASIC]
 function-naming-style=any
